--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hamster Squeakify</title>
+    <title>🐹 Hamster Squeakify</title>
     <style>
       body {
         width: 300px;
@@ -15,7 +15,7 @@
   <body>
     <h1>Hamster Squeakify</h1>
     <p>Click the button to squeakify the page!</p>
-    <button id="squeakify">Squeakify</button>
+    <button id="squeakify">🐹 Squeakify</button>
     <script src="popup.js"></script>
   </body>
 </html>
