Addition of Unsqueakify functionality

--- a/popup.html
+++ b/popup.html
@@ -14,8 +14,9 @@
   </head>
   <body>
     <h1>Hamster Squeakify</h1>
-    <p>Click the button to squeakify the page!</p>
+    <p>Click the button to squeakify or unsqueakify the page!</p>
     <button id="squeakify">Squeakify</button>
+    <button id="unsqueakify">Unsqueakify</button>
     <script src="popup.js"></script>
   </body>
 </html>
