Addition of img elements to popup

--- a/popup.html
+++ b/popup.html
@@ -23,6 +23,10 @@
         text-align: center;
       }
 
+      img {
+        margin-bottom: 10px;
+      }
+
       button {
         font-size: 16px;
         padding: 10px;
@@ -43,7 +47,8 @@
   </head>
   <body>
     <h1>Hamster Squeakify</h1>
-    <button id="squeakify">Squeakify</button>
+    <img src="icon128.png" alt="Hamster Squeakify Icon" />
+    <button id="squeakify">Squeakify <img src="icon48.png" alt="" style="vertical-align: middle;" /></button>
     <button id="unsqueakify">Unsqueakify</button>
     <script src="popup.js"></script>
   </body>
