Adjustments to popup UI and flavor text.

--- a/popup.html
+++ b/popup.html
@@ -27,6 +27,12 @@
         margin-bottom: 10px;
       }
 
+      p {
+        font-size: 14px;
+        margin: 10px;
+        text-align: center;
+      }
+
       button {
         font-size: 16px;
         padding: 10px;
@@ -48,6 +54,7 @@
   <body>
     <h1>Hamster Squeakify</h1>
     <img src="icon128.png" alt="Hamster Squeakify Icon" />
+    <p>Turn your web browsing experience into a hamster paradise! Click the buttons below to squeakify or unsqueakify any page.</p>
     <button id="squeakify">Squeakify <img src="icon48.png" alt="" style="vertical-align: middle;" /></button>
     <button id="unsqueakify">Unsqueakify</button>
     <script src="popup.js"></script>
