popup UI adjustments

--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
         height: 250px;
         margin: 0;
         padding: 20px;
-        font-family: Arial, sans-serif;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -54,7 +54,7 @@
   <body>
     <h1>Hamster Squeakify</h1>
     <p>Turn your web browsing experience into a hamster paradise! Click the buttons below to squeakify or unsqueakify any page.</p>
-    <button id="squeakify">Squeakify <img src="icon48.png" alt="" style="vertical-align: middle;" /></button>
+    <button id="squeakify">Squeakify</button>
     <button id="unsqueakify">Unsqueakify</button>
     <script src="popup.js"></script>
   </body>
